# udisplay

./: .gitignore  README.md  udisplay.schema.json
.github/workflows/: udisplay-client-build.yml
LICENSES/: Apache-2.0.txt  MIT.txt
cmake/: uDisplayVersion.cmake
demos/: CMakeLists.txt  README.md
demos/demo01/: CMakeLists.txt  demo01.yaml  main.c
demos/demo02/: CMakeLists.txt  demo02.yaml  main.cpp
demos/demo03/: CMakeLists.txt  demo03.yaml  main.cpp
demos/demo04/: README.md
demos/demo05/: .gitignore  CMakeLists.txt  README.md  plan-demo05.md  sdkconfig  sdkconfig.defaults
demos/demo05/main/: CMakeLists.txt  Kconfig.projbuild  demo05.yaml  idf_component.yml  main.cpp
demos/demo06/: README.md
demos/demo07/: README.md
demos/shared/: demo_tcp.c  demo_tcp.h  test_demo_tcp.c
docs/: building.md  history-roadmap.md  merkle.md  protocol.md  quickstart.md  widgets.md
libudisplay/: .gitignore  CMakeLists.txt
libudisplay/include/: udisplay.h  version.h.in
libudisplay/src/: chunk_server.c  chunk_server.h  framing.c  framing.h  protocol.c  protocol.h  udisplay.c
libudisplay/test/: CMakeLists.txt  test_chunk_server.cpp  test_framing.cpp  test_protocol.cpp  test_udisplay.cpp
tests/: protocol_vectors.json
udisplay-client/: CMakeLists.txt  debug.yaml
udisplay-client/android/: AndroidManifest.xml
udisplay-client/packaging/: udisplay-client.desktop
udisplay-client/qml/: DeviceScreen.qml  DiscoveryScreen.qml  main.qml
udisplay-client/qml/widgets/: ButtonGroupWidget.qml  ButtonWidget.qml  DisplayWidget.qml  DropdownWidget.qml  GridWidget.qml  LabelWidget.qml  LedWidget.qml  RgbLedWidget.qml  RowWidget.qml  SectionWidget.qml  SeparatorWidget.qml  SliderWidget.qml  TextWidget.qml  ToggleWidget.qml  WidgetDelegate.qml
udisplay-client/scripts/: gen_app_icons.py  gen_schema_enums.py
udisplay-client/src/: BleScanner.cpp  BleScanner.h  BleTransport.cpp  BleTransport.h  BootstrapManager.cpp  BootstrapManager.h  DeviceController.cpp  DeviceController.h  DeviceInfo.h  DiscoveryModel.cpp  DiscoveryModel.h  IScanner.cpp  IScanner.h  MdnsScanner.cpp  MdnsScanner.h  MockTransport.h  Protocol.cpp  Protocol.h  TcpTransport.cpp  TcpTransport.h  Transport.cpp  Transport.h  WidgetDef.h  WidgetDump.cpp  WidgetDump.h  WidgetModel.cpp  WidgetModel.h  YamlParser.cpp  YamlParser.h  main.cpp  udisplay_schema_enums.h
udisplay-client/test/: CMakeLists.txt  test_bootstrap.cpp  test_design_mode.cpp  test_device_controller.cpp  test_discovery_model.cpp  test_protocol.cpp  test_widget_dump.cpp  test_widget_model.cpp  test_yaml_parser.cpp
udisplay-client/test/qml/: test_button_face_children.qml  test_button_face_nested.qml  test_button_face_vertical_center.qml  test_device_screen_style.qml  test_grid_flex_align.qml  test_nested_row_layout.qml  test_row_flex_align.qml  test_row_nested_mixed_flex.qml
udisplay-gen/: LICENSE  pyproject.toml
udisplay-gen/tests/: conftest.py  test_build.py  test_merkle.py  test_validate.py  test_vectors.py
udisplay-gen/udisplay_gen/: __init__.py  build.py  cli.py  init_wizard.py  merkle.py  validate.py  widget_ids.py
udisplay-gen/udisplay_gen/backends/: __init__.py  _shared.py  c_backend.py  cpp_backend.py
udisplay-gen/udisplay_gen/schema/: udisplay.schema.json
