[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "udisplay-gen"
version = "0.1.0"
description = "uDisplay firmware UI codegen"
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
udisplay-gen = "udisplay_gen.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["udisplay_gen*"]

[tool.setuptools.package-data]
udisplay_gen = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
